# zipmem

./: CMakeLists.txt  Makefile  check_seed.c  log.md  main.c  read_input.c  read_input.h  samop.c  samop.h  study_diff.c  time_prof.h  zipmem.c  zipmem.h
bwalib/: bwa.h
bwamem/: bwamem.c  bwamem.h  bwamem_extra.c  bwamem_pair.c  main_mem.c
test_results/: dataset.md
test_scripts/: bwamem.sh  check.sh  pipeline.sh  reorder_minicom.sh  reorder_pgrc.sh  reorder_spring.sh  run_wrapper.sh  study_diff.sh  work_step23.sh  zipmem.sh
